src/objects/BMCServiceDesk__Broadcasts__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpBroadcast</customHelpPage>
    <description>This object allows you to store data for broadcasts.</description>
    <fields>
        <fullName>BMCServiceDesk__BLANK__c</fullName>
        <description>Use this field to add space between fields in a Console fieldset.</description>
        <label>&lt;BLANK&gt;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category_ID__c</fullName>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the broadcast&apos;s category. Categories allow you to classify the broadcast using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Closed_By__c</fullName>
        <formula>BMCServiceDesk__FKClosedBy__r.Username</formula>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Closed By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
        <label>Closure Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unable to solve or in conflict with standards or policy</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by requester</fullName>
                </value>
                <value>
                    <fullName>Workaround</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Display_In_SelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to display the broadcast in Self Service.</inlineHelpText>
        <label>Display In Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the broadcast&apos;s category. Categories allow you to classify the broadcast using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active category.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Broadcasts (FKCategory)</relationshipLabel>
        <relationshipName>Broadcasts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClosedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Broadcasts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Broadcasts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the broadcast&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the broadcast.</inlineHelpText>
        <label>Impact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active impact.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>Broadcasts</relationshipLabel>
        <relationshipName>Broadcasts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKPriority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Priority__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active priority</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Priority__c</referenceTo>
        <relationshipLabel>Broadcasts</relationshipLabel>
        <relationshipName>Broadcasts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Broadcasts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the appropriate status for the broadcast. Status is used to display the progress of a broadcast through its stages of opening to closure.</inlineHelpText>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select an active status that applies to broadcasts.</errorMessage>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToBroadcasts__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Broadcasts (FKStatus)</relationshipLabel>
        <relationshipName>Broadcasts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Broadcasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select how quickly the broadcast needs to be resolved. The urgency and the level of impact are used to calculate the priority of the broadcast.</inlineHelpText>
        <label>Urgency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Urgency__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active urgency.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Broadcasts (FKUrgency)</relationshipLabel>
        <relationshipName>Broadcasts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impact_ID__c</fullName>
        <formula>BMCServiceDesk__FKImpact__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the broadcast&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the broadcast.</inlineHelpText>
        <label>Impact~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_console__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=BroadcastLaunchConsole&amp;recordName=&quot;+Name+&quot;&amp;recordId=&quot;+Id+&quot;&amp;isdtp=vw&amp;uiTheme=&quot;+$User.UIThemeDisplayed, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record will be opened either in Broadcast Console or in Remedyforce Console tab</inlineHelpText>
        <label>Launch Console</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Limit_To_Account_Users__c</fullName>
        <label>Limit to Users in Accounts</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LockedRecordTimestamp__c</fullName>
        <description>this field is used in case of record locking.</description>
        <label>LockedRecordTimestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Priority_ID__c</fullName>
        <formula>BMCServiceDesk__FKPriority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Profiles__c</fullName>
        <inlineHelpText>Use this field to select the staff to whom you want to display the broadcast message. This field is enabled when you clear the To All check box.</inlineHelpText>
        <label>To Profile</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Queue__c</fullName>
        <description>Queue to which the record is assigned.</description>
        <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status_ID__c</fullName>
        <formula>BMCServiceDesk__FKStatus__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the appropriate status for the broadcast. Status is used to display the progress of a broadcast through its stages of opening to closure.</inlineHelpText>
        <label>Status~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field can be used in workflows to increment the count when a new record is added to the Broadcast History.</description>
        <label>Record Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Urgency_ID__c</fullName>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select how quickly the broadcast needs to be resolved. The urgency and the level of impact are used to calculate the priority of the broadcast.</inlineHelpText>
        <label>Urgency~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__br_console_detail_link__c</fullName>
        <description>To be used in Service Cloud Console</description>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__BroadcastConsole?record_name=&quot;&amp; Name &amp;&quot;&amp;record_id=&quot; &amp; Id &amp; &quot;&amp;isdtp=vw&amp;isServiceCloudConsole=true&quot;,Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broadcast ID+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__broadcastDescription__c</fullName>
        <description>Column renamed from Whiteboard Description</description>
        <inlineHelpText>Use this field to enter a detailed description of the outage or issue. This description is appended to the Description field of incidents that are linked to the broadcast.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__broadcastMessage__c</fullName>
        <inlineHelpText>Use this field to enter a short description of the outage or issue that should be broadcasted to users. This message scrolls across the top of the browser if you select the box Scroll Message check box.</inlineHelpText>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__broadcastResolution__c</fullName>
        <inlineHelpText>Use this field to specify what has been done to resolve the outage or issue. This resolution is appended to the Resolution field of incidents that are linked to the broadcast.</inlineHelpText>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__broadcastTicker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to scroll the broadcast message across the top of the browser.</inlineHelpText>
        <label>Scroll Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__closeDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the broadcast is closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__closeIncident__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this field if you want to close all tasks linked to this broadcast. When you have resolved the broadcast, you might want to close all linked tasks because these tasks are no longer required.</inlineHelpText>
        <label>Close Linked Incidents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__expirationDate__c</fullName>
        <inlineHelpText>Use this field to select the date when you want to stop displaying the broadcast message.</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the broadcast record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__postDate__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the broadcast was created.</inlineHelpText>
        <label>Post Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__queueName__c</fullName>
        <inlineHelpText>Displays the name of the queue to which the change broadcast was last assigned.</inlineHelpText>
        <label>Last Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__state__c</fullName>
        <defaultValue>true</defaultValue>
        <label>State Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__toEveryone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to display the broadcast to all staff. By default, broadcasts are displayed to all staff. If you decide to display the broadcast to a staff only, this field is cleared.</inlineHelpText>
        <label>To Everyone</label>
        <type>Checkbox</type>
    </fields>
    <label>Broadcast</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__postDate__c</columns>
        <columns>BMCServiceDesk__broadcastDescription__c</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__FKStatus__c</columns>
        <columns>BMCServiceDesk__expirationDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__Remedyforce_Broadcast_View</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__broadcastMessage__c</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__FKCategory__c</columns>
        <columns>BMCServiceDesk__FKStatus__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>BMCServiceDesk__state__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Remedyforce Broadcast View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ServiceDesk_Broadcasts</fullName>
        <filterScope>Queue</filterScope>
        <label>ServiceDesk</label>
        <queue>ServiceDesk</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Broadcast ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broadcasts</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__BroadcastMessage_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__broadcastMessage__c ) , ISBLANK(BMCServiceDesk__broadcastMessage__c ))</errorConditionFormula>
        <errorMessage>Please enter Broadcast Message.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Cannot_Update_Closed_Broadcast</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(BMCServiceDesk__state__c ), NOT( PRIORVALUE(BMCServiceDesk__state__c)),NOT( ISNEW( )) )</errorConditionFormula>
        <errorMessage>This broadcast is closed. Reopen the broadcast to modify it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Category_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__Category_ID__c) , ISBLANK(BMCServiceDesk__Category_ID__c))</errorConditionFormula>
        <errorMessage>Please enter Category.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Check_ExpirationDate</fullName>
        <active>true</active>
        <description>The expiration date and time should not be earlier than the current date and time or the post date and time.</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__expirationDate__c),ISBLANK(BMCServiceDesk__expirationDate__c) ) ) ,OR(BMCServiceDesk__expirationDate__c &lt;  NOW() ,BMCServiceDesk__expirationDate__c &lt; BMCServiceDesk__postDate__c))</errorConditionFormula>
        <errorMessage>The expiration date and time should not be earlier than the current date and time or the post date and time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__UniqueBroadcastIDCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISNEW( ), ISCHANGED( Name )),NOT( ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Broadcasts__c.Fields.Name,$ObjectType.BMCServiceDesk__Broadcasts__c.Fields.Name,NULLVALUE(Name, Name) ))))</errorConditionFormula>
        <errorMessage>A Broadcast record with this Broadcast ID already exists. Enter unique Broadcast ID.</errorMessage>
    </validationRules>
</CustomObject>